优化聊天框颜色：机器人使用黑色背景白色文字，用户使用绿色背景黑色文字

--- a/static/index.html
+++ b/static/index.html
@@ -36,12 +36,14 @@
             max-width: 80%;
         }
         .user-message {
-            background-color: #e3f2fd;
+            background-color: #4CAF50; /* 绿色背景 */
+            color: #000000; /* 黑色文字 */
             margin-left: auto;
             text-align: right;
         }
         .bot-message {
-            background-color: #f1f1f1;
+            background-color: #212121; /* 黑色背景 */
+            color: #FFFFFF; /* 白色文字 */
             margin-right: auto;
         }
         .input-container {
